--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -2,5 +2,12 @@
   width: 200px;
   height: 100%;
   background-color: #6a59b0;
-  color: #fff;
+  box-sizing: border-box;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.Drawer span {
+  color: rgba(0, 0, 0, 0.54);
+  font-weight: 500;
 }
