--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,13 @@
 .Header {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+}
+
+.Header button {
+  position: absolute;
+  left: 10px;
+  top: 0;
 }
 
 .Header svg {
@@ -14,4 +20,8 @@
   font-weight: 500;
   font-size: 30px;
   color: #BDB3E6;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
